--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,67 @@
+:icons: font
 :version: 1.0-SNAPSHOT
 = AsciidoctorJ Office Extension
 
-image:https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master.svg["CircleCI", link="https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master"]
+image:https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master.svg?style=shield["CircleCI", link="https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master"]
 image:https://img.shields.io/badge/License-MIT-yellow.svg["MIT License", link="https://opensource.org/licenses/MIT"]
 
 This AsciidoctorJ extension helps you to use office documents in your asciidoc toolchain.
+
+== Installation
+
+The extension is available in https://bintray.com/bintray/jcenter[JCenter].
+To use this extension declare it as a dependency in asciidoctor-maven-plugin configuration.
+
+[subs="attributes, verbatim"]
+[source, xml]
+----
+<plugin>
+	<groupId>org.asciidoctor</groupId>
+	<artifactId>asciidoctor-maven-plugin</artifactId>
+	<version>1.5.2</version>
+	<executions>
+		<execution>
+			<id>output-html</id>
+			<phase>generate-resources</phase>
+			<goals>
+				<goal>process-asciidoc</goal>
+			</goals>
+			<configuration>
+				<backend>html</backend>
+			</configuration>
+		</execution>
+	</executions>
+	<dependencies>
+		<dependency> <!--1-->
+			<groupId>com.uniqueck</groupId>
+			<artifactId>asciidoctorj-office-extension</artifactId>
+			<version>{version}</version> <!--2-->
+		</dependency>
+	</dependencies>
+</plugin>
+----
+
+<1> asciidoctorj-office-extension is added
+<2> check for the latest version at https://bintray.com/bintray/jcenter[JCenter]
+
+== Powerpoint Extension
+
+=== slide macro
+
+[source]
+----
+slide::/path/to/powerpointFile.pptx[slideNumber=1]
+----
+
+This macro generate an image from the first slide from the given powerpointFile.pptx and embedded it in your asciidoc document.
+
+== Excel Extension
+
+=== excel macro
+
+[source]
+----
+excel::/path/to/excel.xlsx[sheetName=Table1]
+----
+
+This macro generate a asciidoc table based on your excel sheet.
