--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,7 @@
 
 image:https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master.svg?style=shield["CircleCI", link="https://circleci.com/gh/uniqueck/asciidoctorj-office-extension/tree/master"]
 image:https://img.shields.io/badge/License-MIT-yellow.svg["MIT License", link="https://opensource.org/licenses/MIT"]
+image:https://api.bintray.com/packages/uniqueck/asciidoctorj/asciidoctorj-office-extension/images/download.svg[link="https://bintray.com/uniqueck/asciidoctorj/asciidoctorj-office-extension/_latestVersion"]
 
 This AsciidoctorJ extension helps you to use office documents in your asciidoc toolchain.
 
@@ -18,7 +19,7 @@ To use this extension declare it as a dependency in asciidoctor-maven-plugin con
 <plugin>
 	<groupId>org.asciidoctor</groupId>
 	<artifactId>asciidoctor-maven-plugin</artifactId>
-	<version>1.5.2</version>
+	<version>2.0.0-RC.1</version>
 	<executions>
 		<execution>
 			<id>output-html</id>
