--- a/src/test/resources/expectedTableStructure.adoc
+++ b/src/test/resources/expectedTableStructure.adoc
@@ -1,13 +1,15 @@
+[options=header, cols="1,1"]
 |===
-|Spalte 1|Spalte 2
+.>|Spalte 1
+.>|Spalte 2
 
-|1.0
-|2.0
+.>|1
+.>|2
 
-|3.0
-|4.0
+.>|3
+.>|4
 
-|4.0
-|6.0
+.>|4
+.>|6
 
 |===
